added printing method page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,14 +39,14 @@
               <div class="dropdown-menu dropdown-menu-right" >
                 <a class="dropdown-item" routerLink="/about" routerLinkActive="active" (click)="onClick()">About Us</a>
                 <a class="dropdown-item" href="https://www.facebook.com/tjgsingapore/" target="_blank" (click)="onClick()">Portfolio Gallery</a>
-                <a class="dropdown-item" routerLink="/blog" routerLinkActive="active" (click)="onClick()">Blog (Under Construction)</a>
+                <!-- <a class="dropdown-item" routerLink="/blog" routerLinkActive="active" (click)="onClick()">Blog (Under Construction)</a> -->
                 <!-- <a class="dropdown-item" routerLink="/blog-post">Single Blog Post</a>
                       <a class="dropdown-item" routerLink="/404">404 Page</a> -->
               </div>
             </li>
             <!--//dropdown-->
             <li class="nav-item dropdown" routerLinkActive="active">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" routerLink="/products">Product
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" routerLink="/products">Products
                 <i class="fa fa-angle-down"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-right">
