--- a/src/app/printing-methods/printing-methods.component.html
+++ b/src/app/printing-methods/printing-methods.component.html
@@ -2,73 +2,190 @@
 
   <!-- ******Services Section****** -->
   <section id="services" class="services section">
-      <div class="container text-center">
-          <h2 class="title">Services</h2>
-          <p class="intro">We offer lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-          <div class="service-items row">
-              <div class="item col-xl-3 col-md-6 col-12">
-                  <div class="item-inner">
-                      <div class="header-box">
-                          <span class="fs1" aria-hidden="true" data-icon="&#xe104;"></span>
-                      </div><!--//header-->
-                      <div class="desc">
-                          <h3 class="sub-title">Silkscreen Printing</h3>
-                          <p>Silkscreen printing is one of the most common printing method. It is the process of transferring ink through the screen and onto the apparel. </p>
-                          <p><strong>Advantages</strong></p>
-                          <p>1) Very Durable and long lasting</p>
-                          <p>2) Very cost efficient for large quantities</p>
-                          <p>3) Wide variety of colours ; Able to follow Pantone colour</p>
-                          <p><strong>Disadvantages</strong></p>
-                          <p>1) Expensive for small quantities</p>
-                          <p>2) Expensive for multiple coloured designs</p>
-                      </div>
-                  </div><!--//item-inner-->
-              </div><!--//item-->
-              <div class="item col-xl-3 col-md-6 col-12">
-                  <div class="item-inner">
-                      <div class="header-box">
-                          <span class="fs1" aria-hidden="true" data-icon="&#xe0ea;"></span>
-                      </div><!--//header-->
-                      <div class="desc">
-                          <h3 class="sub-title">Digital &amp; Vinyl Heat Transfer Printing</h3>
-                          <p>Digital &amp; Vinyl Heat Transfer Printing is the process of using a film and transferring it onto the apparel via intense heat.</p>
-                          <p>A) For Digital Heat Transfer Printing, this printing method has the ability to do up multiple coloured designs and even gradient colours.</p>
-                          <p><strong>Advantages</strong></p>
-                          <p>1) Versatile and can be printed on many material</p>
-                          <p>2) Most cost friendly for multiple-coloured designs for small quantities</p>
-                          <p>3) Able to print out Gradient Effect</p>
-                          <p><strong>Disadvantages</strong></p>
-                          <p>1) Not so durable </p>
-                          <p>2) Colours may fade away with time</p>
-                          <p>3) Recommended to hand wash. Not suitable to be placed in dryer</p>
-                      </div>
-                  </div><!--//item-inner-->
-              </div><!--//item-->
-              <div class="item col-xl-3 col-md-6 col-12">
-                  <div class="item-inner">
-                      <div class="header-box">
-                          <span class="fs1" aria-hidden="true" data-icon="&#xe003;"></span>
-                      </div><!--//header-->
-                      <div class="desc">
-                          <h3 class="sub-title">Hosting</h3>
-                          <p>Cras mollis ex sed tortor finibus, a mattis risus rhoncus. Sed sodales et metus at sodales. Ut non dolor sollicitudin, venenatis mauris eget, fringilla enim. Pellentesque sed magna ante. Cras mollis tincidunt lectus vitae suscipit.</p>
-                      </div>
-                  </div><!--//item-inner-->
-              </div><!--//item-->
-              <div class="item col-xl-3 col-md-6 col-12">
-                  <div class="item-inner">
-                      <div class="header-box">
-                          <span class="fs1" aria-hidden="true" data-icon="&#xe028;"></span>
-                      </div><!--//header-->
-                      <div class="desc">
-                          <h3 class="sub-title">Support</h3>
-                          <p>Aliquam efficitur, lorem blandit dapibus viverra, erat turpis placerat lacus, quis hendrerit libero sem eget dui. Integer eu diam orci. Nullam sed dictum lorem. Quisque ut lacus non enim aliquam pretium sit amet id augue.</p>
-                      </div>
-                  </div><!--//item-inner-->
-              </div><!--//item-->
-          </div><!--//row-->
-          <a class="btn btn-cta btn-cta-primary" href="contact.html">Get a quote</a>
-      </div><!--//container-->
+    <div class="container text-center">
+      <h2 class="title">Printing Methods & Tips</h2>
+      <p class="intro">At TheJerrardGarage, we communicate openly and honestly about our pricing as we work to provide you with the best quotation. This dedicated page is to offer you the different type of printing method and tips for you to achieve the best quality and affordable pricing packages in the market.</p>
+      <div class="service-items row">
+        <div class="item col-xl-3 col-md-6 col-12">
+          <div class="item-inner">
+            <img src="../assets/images/printing-methods/Silkcreen.png" alt="Silkscreen">
+          </div>
+          <!--//item-inner-->
+        </div>
+        <!--//item-->
+        <div class="item col-xl-3 col-md-6 col-12">
+          <div class="item-inner">
+            <img src="../assets/images/printing-methods/Vinyl.png" alt="Vinyl">
+          </div>
+          <!--//item-inner-->
+        </div>
+        <!--//item-->
+        <div class="item col-xl-3 col-md-6 col-12">
+          <div class="item-inner">
+            <img src="../assets/images/printing-methods/Embroidery.png" alt="Embroidery">
+          </div>
+          <!--//item-inner-->
+        </div>
+        <!--//item-->
+        <div class="item col-xl-3 col-md-6 col-12">
+          <div class="item-inner">
+            <img src="../assets/images/printing-methods/DTG.png" alt="DTG">
+          </div>
+          <!--//item-inner-->
+        </div>
+        <!--//item-->
+
+      </div>
+      <!--//row-->
+    </div>
+    <!--//container-->
   </section>
 
+  <article class="case-study-article article">
+    <div class="container">
+      <div class="row">
+        <div class="content-wrapper col-lg-10 col-12 mr-lg-auto ml-lg-auto">
+          <div class="content">
+
+            <section class="content-section" id="silkscreen">
+              <h3 class="section-title">Silkscreen Printing</h3>
+              <p>Silkscreen printing is one of the most common printing method. It is the process of transferring ink through
+                the screen and onto the apparel.</p>
+            </section>
+            <!--//content-section-->
+            <section class="content-section">
+              <h4 class="section-subtitle">Advantages</h4>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Very Durable and long lasting</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Very cost efficient for large quantities</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Wide variety of colours ; Able to follow Pantone colour</li>
+              </ul>
+              <h4 class="section-subtitle">Disadvantages</h4>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Expensive for small quantities</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Expensive for multiple coloured designs</li>
+              </ul>
+            </section>
+            <!--//content-section-->
+
+            <section class="content-section" id="vinyl">
+              <h3 class="section-title">Digital &amp; Vinyl Heat Transfer Printing</h3>
+              <p>Digital &amp; Vinyl Heat Transfer Printing is the process of using a film and transferring it onto the apparel
+                via intense heat.</p>
+              <p>A) For Digital Heat Transfer Printing, this printing method has the ability to do up multiple coloured designs
+                and even gradient colours.</p>
+            </section>
+            <!--//content-section-->
+            <section class="content-section">
+              <h4 class="section-subtitle">Advantages</h4>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Versatile and can be printed on many material</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Most cost friendly for multiple-coloured designs for small quantities</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Able to print out Gradient Effect</li>
+              </ul>
+              <h4 class="section-subtitle">Disadvantages</h4>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Not so durable</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Colours may fade away with time</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Recommended to hand wash. Not suitable to be placed in dryer</li>
+              </ul>
+
+              <p>B) Vinyl Heat Transfer Printing are more common for class tee printing. It provides the cheapest price for
+                customization such as Names & Numbers. At our company, we use top notch quality PU material films instead
+                of PVC material films. PU Films are softer, more flexible and more durable. </p>
+            </section>
+            <!--//content-section-->
+            <section class="content-section">
+              <h4 class="section-subtitle">Advantages</h4>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Versatile and can be printed on many material</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Cheapest form of printing customization (Eg. Names & Numbers)</li>
+              </ul>
+              <h4 class="section-subtitle">Disadvantages</h4>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Not so durable</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Recommended to hand wash. Not suitable to be placed in dryer</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Limited colour range</li>
+              </ul>
+            </section>
+            <!--//content-section-->
+
+            <section class="content-section" id="embroidery">
+              <h3 class="section-title">Embroidery</h3>
+              <p>Embroidery is the process of sewing and threading the design onto the apparel. It adds texture which creates
+                a pop-up effect. It provides an impression of quality and professionalism. </p>
+            </section>
+            <!--//content-section-->
+            <section class="content-section">
+              <h4 class="section-subtitle">Advantages</h4>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Most durable </li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Wide variety of colours</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> An impression of quality, sleekness and professionalism</li>
+              </ul>
+              <h4 class="section-subtitle">Disadvantages</h4>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Not suitable for small and detailed designs</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Not recommended for very large and complex design</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Unable to have gradient effect</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> More expensive than Silkscreen Printing</li>
+              </ul>
+            </section>
+            <!--//content-section-->
+
+            <section class="content-section" id="dtg">
+              <h3 class="section-title">Direct-To-Garment Printing (DTG)</h3>
+              <p>Direct-To-Garment Printing (DTG) is the transferred of Ink directly into the garment via Inkjet Technology.
+                </p>
+            </section>
+            <!--//content-section-->
+            <section class="content-section">
+              <h4 class="section-subtitle">Advantages</h4>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Able to print Multiple and Gradient Colours</li>
+              </ul>
+              <h4 class="section-subtitle">Disadvantages</h4>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Can only be printed on 100% Cotton Material</li>
+                <li>
+                  <i class="fa fa-arrow-circle-right"></i> Expensive and not cost friendly for large quantity</li>
+              </ul>
+            </section>
+            <!--//content-section-->
+          </div>
+          <!--//content-->
+
+        </div>
+        <!--//content-wrapper-->
+      </div>
+      <!--//row-->
+    </div>
+    <!--//container-->
+  </article>
+  <!--//case-study-->
   <app-call-to-action></app-call-to-action>
