--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,20 +1,22 @@
 <body class="about-page no-header-wrapper">
 
-    <!-- ******team Section****** -->
-    <section id="team" class="team section">
-        <div class="container">
-            <h2 class="title text-center">Who are we?</h2>
-            <p class="intro text-center">TheJerrardGarage is a t shirt printing Singapore Company that specalised in customised shirts printing. We deliver good quality printing at competitive pricing with reliable delivery. No minimum order is required.
-            <br><br>
-            Our products have a wide variety range from dri-fit t-shirts, cotton t-shirts, polo tees, singlets, hoodies, draw strings bags and many more. Suitable for all events and occasions which you can print for your company tees, class t-shirts, couple t-shirts and individual apparels. We allow you to personalised and design apparel that you desire.
-            <br><br>
-            We provide an extensive printing technique from the commonly used method silkscreen printing to the popular Direct-to-Garment printing, embroidery and many more printing options.
-            <br><br>
-            Our customer satisfaction will always be our pride and joy. We guarantee excellent customer service and quality assurance.  We dare say we are the cheapest t shirt printing in Singapore too!</p>
-        </div><!--//container-->
-        <div class="col-12 text-center">
-          <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/" target="_blank">Browse our portfolio</a>
-        </div>
-    </section><!--//team-section-->
+  <!-- ******team Section****** -->
+  <section id="team" class="team section">
+    <div class="container">
+      <h2 class="title text-center">Who are we?</h2>
+      <p class="intro text-center">TheJerrardGarage is a T-Shirt printing Singapore Company that specialised in customised T-Shirts printing. We deliver good quality printing at competitive pricing with reliable delivery.
+        <br>
+        <br> Our products have a wide variety range from Dri-fit T-Shirts, Cotton T-Shirts, Polo T-Shirts, Singlets, Hoodies, Drawstrings bags and many more. Suitable for all events and occasions which you can print for your company T-Shirts, Class T-Shirts, Couple T-Shirts and individual apparels. We allow you to personalised and design apparel that you desire.
+        <br>
+        <br> We provide an extensive printing technique from the commonly used method of silkscreen printing to the popular Direct-to-Garment printing, embroidery and many more printing options.
+        <br>
+        <br> Our customer satisfaction will always be our pride and joy. We guarantee excellent customer service and quality assurance. We dare say we are the cheapest T-Shirt printing in Singapore too!
+    </div>
+    <!--//container-->
+    <div class="col-12 text-center">
+      <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/" target="_blank">Browse our portfolio</a>
+    </div>
+  </section>
+  <!--//team-section-->
 
-<app-call-to-action></app-call-to-action>
+  <app-call-to-action></app-call-to-action>
