--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -4,7 +4,7 @@
     <section class="contact-section section">
         <div class="container">
             <h2 class="title text-center">Customize your shirts with us today</h2>
-            <p class="intro text-center"></p>
+            <p class="intro text-center">Send us a message if you have questions for us or to find out more about our services. We would love to hear from you!</p>
             <ul class="contact-info list-inline text-center">
                 <li class="tel list-inline-item"><span class="fs1" aria-hidden="true" data-icon="&#x77;"></span><br /> <a href="tel:+65 9758 1071">+65 9758 1071</a></li>
                 <li class="email list-inline-item"><span class="fs1" aria-hidden="true" data-icon="&#xe010;"></span><br /> <a href="mailto:sales@tjg.sg">sales@tjg.sg</a></li>
