--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -49,7 +49,8 @@
           <div class="fs1" aria-hidden="true" data-icon="&#xe0ed;"></div>
           <h3 class="sub-title">Cheap &amp; Transparent Pricing</h3>
           <div class="desc">
-            <p>We provide cheap and affordable pricing at competitive rates. We work around with your budget and ensure we deliver a quality services.</p>
+            <p>We provide cheap and affordable pricing at competitive rates. We work around with your budget and ensure we deliver
+              a quality services.</p>
           </div>
         </div>
         <!--//item-inner-->
@@ -72,7 +73,8 @@
           <h3 class="sub-title">A Myriad Of Product Apparels</h3>
           <div class="desc">
             <p>
-              We carry a wide extensive range of product apparels. Ranging from T-shirts, Polo T-Shirts Hoodies, Windbreakers, Tote bags and Drawstring bags.</p>
+              We carry a wide extensive range of product apparels. Ranging from T-shirts, Polo T-Shirts Hoodies, Windbreakers, Tote bags
+              and Drawstring bags.</p>
           </div>
         </div>
         <!--//item-inner-->
@@ -97,7 +99,10 @@
         <div class="item-inner">
           <div class="quote-container">
             <i class="fa fa-quote-left"></i>
-            <blockquote class="quote">I've been ordering my class and CCA t-shirts from TheJerrardGarage since 2015. They provide very good services, which include designing and even delivery. The quality of the t-shirts and printing has always been fantastic and the first batch of t-shirts I ordered still looks new! The prices are also reasonable and cheaper than previous vendors that I've ordered from. TheJerrardGarage will have my continued support!
+            <blockquote class="quote">I've been ordering my class and CCA t-shirts from TheJerrardGarage since 2015. They provide very good services,
+              which include designing and even delivery. The quality of the t-shirts and printing has always been fantastic
+              and the first batch of t-shirts I ordered still looks new! The prices are also reasonable and cheaper than
+              previous vendors that I've ordered from. TheJerrardGarage will have my continued support!
             </blockquote>
             <!--//quote-->
           </div>
@@ -126,7 +131,10 @@
         <div class="item-inner">
           <div class="quote-container">
             <i class="fa fa-quote-left"></i>
-            <blockquote class="quote">I really like to order shirts from TheJerrardGarage. They are always very efficient in response & deliver quality products. The shirts are always quoted with reasonable pricing & the team often advice in terms of area of improvement for the shirt design. Their services are great! They are always sincere in seeking customers feedback striving for improvement. Highly recommended.
+            <blockquote class="quote">I really like to order shirts from TheJerrardGarage. They are always very efficient in response & deliver quality
+              products. The shirts are always quoted with reasonable pricing & the team often advice in terms of area of
+              improvement for the shirt design. Their services are great! They are always sincere in seeking customers feedback
+              striving for improvement. Highly recommended.
             </blockquote>
             <!--//quote-->
           </div>
@@ -157,11 +165,15 @@
         <div class="item-inner">
           <div class="quote-container">
             <i class="fa fa-quote-left"></i>
-            <blockquote class="quote">TheJerrardGarage had been my go-to place for good quality, timely and trustable printing company; both for corporate or personal printing of shirts.
+            <blockquote class="quote">TheJerrardGarage had been my go-to place for good quality, timely and trustable printing company; both for corporate
+              or personal printing of shirts.
               <br>
-              <br> They had been easy to work with. There were more than 3 occasions that TJG help to rush a tight deadline to ensure the printing of shirts is delivered on time.
+              <br> They had been easy to work with. There were more than 3 occasions that TJG help to rush a tight deadline to
+              ensure the printing of shirts is delivered on time.
               <br>
-              <br> TJG also offers a range of fabrics to suit your budget. Dri-fit material ranges from the most basic "thin" material to the "thicker" moisture wicking type. Recommendation from TJG on the printing is spot-on as well. When budget is tight, they will inform in advance that the printing is of lower quality.
+              <br> TJG also offers a range of fabrics to suit your budget. Dri-fit material ranges from the most basic "thin"
+              material to the "thicker" moisture wicking type. Recommendation from TJG on the printing is spot-on as well.
+              When budget is tight, they will inform in advance that the printing is of lower quality.
               <br>
               <br> In summary, TJG had been providing honest and top quality shirt printing services.
 
@@ -210,11 +222,7 @@
         <!-- <a href="#">
         </a> -->
       </li>
-      <li class="col-md-3 col-6">
-        <img class="img-fluid clientLogo" src="assets/logos/Found.png" alt="Found" />
-        <!-- <a href="#">
-        </a> -->
-      </li>
+
       <li class="col-md-3 col-6">
         <img class="img-fluid clientLogo" src="assets/logos/KFC.png" alt="KFC" />
         <!-- <a href="#">
@@ -222,6 +230,11 @@
       </li>
       <li class="col-md-3 col-6">
         <img class="img-fluid clientLogo" src="assets/logos/Mindshare.png" alt="Mindshare" />
+        <!-- <a href="#">
+          </a> -->
+      </li>
+      <li class="col-md-3 col-6">
+        <img class="img-fluid clientLogo" src="assets/logos/MOE LOGO.png" alt="MOE" />
         <!-- <a href="#">
         </a> -->
       </li>
@@ -234,15 +247,21 @@
         </a> -->
       </li>
       <li class="col-md-3 col-6">
-        <img class="img-fluid clientLogo" src="assets/logos/Singtel.png" alt="SingTel" />
+        <img class="img-fluid clientLogo" src="assets/logos/PA Logo.jpg" alt="PA" />
         <!-- <a href="#">
-        </a> -->
+          </a> -->
       </li>
       <li class="col-md-3 col-6">
         <img class="img-fluid clientLogo" src="assets/logos/SQ.png" alt="Singapore Airlines" />
         <!-- <a href="#">
         </a> -->
       </li>
+      <li class="col-md-3 col-6">
+        <img class="img-fluid clientLogo" src="assets/logos/Singtel.png" alt="SingTel" />
+        <!-- <a href="#">
+          </a> -->
+      </li>
+
     </ul>
     <!--//logos-list-->
   </div>
