--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -9,34 +9,34 @@
                 <li class="tel list-inline-item"><span class="fs1" aria-hidden="true" data-icon="&#x77;"></span><br /> <a href="tel:+65 9758 1071">+65 9758 1071</a></li>
                 <li class="email list-inline-item"><span class="fs1" aria-hidden="true" data-icon="&#xe010;"></span><br /> <a href="mailto:sales@tjg.sg">sales@tjg.sg</a></li>
             </ul>
-            <form id="contact-form" class="contact-form form validate" method="post" action="https://tjg.us18.list-manage.com/subscribe/post?u=9f6a6cd28cfe642c2c203c876&amp;id=c9ca3040eb" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+
+        
+            <form id="gform" class="contact-form form validate" method="POST" action="https://script.google.com/macros/s/AKfycbyOXMeJEI7-9pGNwJNnexXFEtfha8X2Sw5759Dz7OAFx_Dr8fA/exec" novalidate>
                 <div class="row text-center">
                     <div class="contact-form-inner col-lg-8 col-12 mr-lg-auto ml-lg-auto">
                         <div class="row">
+                                <label class="sr-only">Keep this field blank</label>
+                                <input id="honeypot" type="text" name="honeypot" value="" />
                             <div class="col-md-6 col-12 form-group">
                                 <label class="sr-only" for="mce-FNAME">Your firstname</label>
-                                <input type="text" class="form-control" id="mce-FNAME" name="FNAME" placeholder="Your firstname" required>
+                                <input type="text" class="form-control" id="mce-FNAME" name="FirstName" placeholder="Your firstname" required>
                             </div>
                             <div class="col-md-6 col-12 form-group">
                                 <label class="sr-only" for="mce-LNAME">Your lastname</label>
-                                <input type="text" class="form-control" id="mce-LNAME" name="LNAME" placeholder="Your lastname" required>
+                                <input type="text" class="form-control" id="mce-LNAME" name="LastName" placeholder="Your lastname" required>
                             </div>
                             <div class="col-md-6 col-12 form-group">
                                 <label class="sr-only" for="mce-MOBILE">Your mobile number</label>
-                                <input type="tel" class="form-control" id="mce-MOBILE" name="MOBILE" placeholder="Your mobile" required>
+                                <input type="tel" class="form-control" id="mce-MOBILE" name="Mobile" placeholder="Your mobile" required>
                             </div>
                             <div class="col-md-6 col-12 form-group">
                                 <label class="sr-only" for="mce-EMAIL">Your email address</label>
-                                <input type="email" class="form-control" id="mce-EMAIL" name="EMAIL" placeholder="Your email address" required>
+                                <input type="email" class="form-control" id="mce-EMAIL" name="Email" placeholder="Your email address" required>
                             </div>
                             <div class="col-12 form-group">
                                 <label class="sr-only" for="mce-MESSAGE">Your message</label>
-                                <textarea class="form-control" id="cmessage" name="MESSAGE" placeholder="Enter your message" rows="12" required></textarea>
+                                <textarea class="form-control" id="cmessage" name="Message" placeholder="Enter your message" rows="12" required></textarea>
                             </div>
-                            <div id="mce-responses" class="clear">
-                              <div class="response" id="mce-error-response" style="display:none"></div>
-                              <div class="response" id="mce-success-response" style="display:none"></div>
-                            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                              <div class="col-12 form-group">
                                 <button type="submit" class="btn btn-block btn-cta btn-cta-primary">Send Message</button>
                             </div>
@@ -44,9 +44,15 @@
                     </div>
                 </div><!--//row-->
                 <div id="form-messages"></div>
+                <p class="intro text-left">All fields required.</p>
             </form><!--//contact-form-->
-            <p class="intro text-left">All fields required.</p>
-            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-            <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='NAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='MESSAGE';ftypes[5]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
+            <div style="display:none;" id="thankyou_message">
+                <p class="intro">
+                    Thank you for contacting us! <br><br>
+                    We will get back to you soon.
+                </p>
+            </div>
+            
         </div><!--//container-->
     </section><!--//contact-section-->
