contact page thank you msg OK

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -3,7 +3,7 @@
     <!-- ******Contact Section****** -->
     <section class="contact-section section">
         <div class="container">
-            <h2 class="title text-center">Customize your shirts with us today</h2>
+            <h2 class="title text-center">Customise your T-Shirts with us today!</h2>
             <p class="intro text-center">Send us a message if you have questions for us or to find out more about our services. We would love to hear from you!</p>
             <ul class="contact-info list-inline text-center">
                 <li class="tel list-inline-item"><span class="fs1" aria-hidden="true" data-icon="&#x77;"></span><br /> <a href="tel:+65 9758 1071">+65 9758 1071</a></li>
@@ -48,9 +48,8 @@
             </form><!--//contact-form-->
 
             <div style="display:none;" id="thankyou_message">
-                <p class="intro">
-                    Thank you for contacting us! <br><br>
-                    We will get back to you soon.
+                <p class="intro text-center">
+                    Thank you for your enquiry! We will contact you within 2 days.
                 </p>
             </div>
             
