--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -10,7 +10,7 @@
         <br>
         <br> We provide an extensive printing technique from the commonly used method of silkscreen printing to the popular Direct-to-Garment printing, embroidery and many more printing options.
         <br>
-        <br> Our customer satisfaction will always be our pride and joy. We guarantee excellent customer service and quality assurance. We dare say we are the cheapest T-Shirt printing in Singapore too!
+        <br> Our customer satisfaction will always be our pride and joy. We guarantee excellent customer service and quality assurance. We are the cheapest T-Shirt printing in Singapore too!
     </div>
     <!--//container-->
     <div class="col-12 text-center">
