--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -16,7 +16,7 @@
       <h2 class="title">
         <!-- <span class="upper"><img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage"></span> -->
         <span class="middle">T-Shirt Printing Singapore</span>
-        <span class="bottom">Customised T-shirts at a cheap price. Good quality and wide range of products.</span>
+        <span class="bottom">Get customised, good quality t-shirts at any budget. Choose from a wide range of apparel products.</span>
       </h2>
       <button class="btn btn-cta btn-cta-primary" type="button" routerLink="/request-for-quote">Request for quote</button>
     </div>
@@ -38,8 +38,7 @@
           <div class="fs1" aria-hidden="true" data-icon="&#xe0e1;"></div>
           <h3 class="sub-title">Quick Turn Around &amp; Delivery</h3>
           <div class="desc">
-            <p>We work every order with speed and precise. Shortest lead time and delivery for bulk purchase. Lay back relax,
-              we got it all sorted out with a guaranteed a peace of mind.</p>
+            <p>We process every order with speed and precision. With the shortest lead time and delivery for bulk purchases, you can relax and get a guaranteed peace of mind as we got it all sorted.</p>
           </div>
         </div>
       </div>
@@ -49,8 +48,7 @@
           <div class="fs1" aria-hidden="true" data-icon="&#xe0ed;"></div>
           <h3 class="sub-title">Cheap &amp; Transparent Pricing</h3>
           <div class="desc">
-            <p>We provide cheap and affordable pricing at competitive rates. We work around with your budget and ensure we deliver
-              a quality services.</p>
+            <p>We work around your budgets and ensure we deliver quality services.</p>
           </div>
         </div>
         <!--//item-inner-->
